# tempsystem-rs

./: Cargo.toml  README.md
.forgejo/workflows/: build_image.yaml
docker/: Dockerfile  makepkg.conf  pacman.conf  setup-inside.sh  zshrc
hooks/: util.sh
src/: docker.rs  main.rs
version/: Cargo.toml  build.rs
version/src/: lib.rs
