[package]
name = "tempsystem-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
bollard = "0.19.3"
clap = { version = "4.5.48", features = ["derive"] }
colorize = "0.1.0"
futures-util = "0.3.31"
indicatif = { version = "0.18.0", features = ["tokio"] }
termion = "4.0.5"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }

version = { path = "./version" }

[lints.clippy]
needless_return = "allow"
